remove calls to deprecated methods